# paragraph-seperator-trainer

./: .gitignore  README.md  pyproject.toml
docs/reviews/: llm_input_instruction_output_strategy_260528.html
docs/superpowers/plans/: 2026-05-28-teacher-annotation-pipeline.md  2026-05-29-sermon-teacher-labeling-sft-dataset.md
docs/superpowers/specs/: 2026-05-29-sermon-boundary-training-design.md
src/sermon_pipeline/: __init__.py  boundary_eval.py  cli.py  constants.py  dataset.py  gradio_demo.py  io.py  models.py  openai_client.py  sentence_splitter.py  silver_annotations.py  student_sft.py  teacher.py  teacher_batch.py  teacher_ingest.py  teacher_schema.py  teacher_windows.py  text.py  train_sft.py  validation.py
src/sermon_pipeline/extractors/: __init__.py  datalab.py  docx.py  hwp.py
tests/: README.md  openai_preprocessing_comparison.py  test_boundary_eval.py  test_cli_smoke.py  test_dataset_build.py  test_extractors.py  test_gradio_demo.py  test_models.py  test_sentence_splitter.py  test_silver_annotations.py  test_student_sft.py  test_teacher_batch.py  test_teacher_ingest.py  test_teacher_payload.py  test_teacher_schema.py  test_teacher_windows.py  test_text.py  test_train_sft.py  test_validation.py
