[project]
name = "paragraph-seperator-trainer"
version = "0.1.0"
description = "Source-aware sermon paragraph boundary annotation pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
demo = [
  "gradio>=6.0.0",
]
hwp = [
  "libhwp==0.2.0",
]
train = [
  "wandb>=0.17.0",
]

[project.scripts]
sermon-preprocessing-comparison = "sermon_pipeline.cli:main"
sermon-dataset-build = "sermon_pipeline.dataset:main"
sermon-teacher-batch-build = "sermon_pipeline.teacher_batch:main"
sermon-teacher-batch-ingest = "sermon_pipeline.teacher_ingest:main"
sermon-silver-annotations-build = "sermon_pipeline.silver_annotations:main"
sermon-sft-build = "sermon_pipeline.student_sft:main"
sermon-sft-train-smoke = "sermon_pipeline.train_sft:main"
sermon-gradio-demo = "sermon_pipeline.gradio_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sermon_pipeline"]
